--- a/src/ckanext-test/ckanext/test/templates/home/layout1.html
+++ b/src/ckanext-test/ckanext/test/templates/home/layout1.html
@@ -1,3 +1,8 @@
 {% ckan_extends %}
 
+{% block featured_organization %}
+{% snippet 'organization/snippets/organization_list.html', organizations=h.test_organizations()%}
+{% endblock %}
 
+{% block featured_group %}
+{% snippet 'group/snippets/group_%}
