--- a/src/ckanext-test/ckanext/test/templates/home/layout1.html
+++ b/src/ckanext-test/ckanext/test/templates/home/layout1.html
@@ -5,4 +5,5 @@
 {% endblock %}
 
 {% block featured_group %}
-{% snippet 'group/snippets/group_%}
+{% snippet 'group/snippets/group_list.html', groups=h.test_most_popular_groups()%}
+{% endblock %} 
